Revert "Fix hero wrap on mobile"
This reverts commit 5cbd412ba46142f8214c79f62caab763a8b422c6.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,30 +62,20 @@ nav.menu-content a {
     padding-left: 2rem;
 }
 
-* {
-  box-sizing: border-box;
+.hero {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 1.5rem;
 }
 
-
-/* Create two equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 50%;
-  padding: 10px;
+img.hero-image {
+    grid-column: 1;
+    grid-row: 1;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 1068px) {
-  .column {
-    width: 100%;
-  }
+div.hero-text {
+    grid-column: 2;
+    grid-row: 1;
 }
 
 .social {
